# EQTest

./: .gitignore  Maya socket client Get Info.ipynb  Maya socket client Set Info.ipynb  README.md
Animation/: Bow.mb  Critisize.mb  High Five.mb  Point.mb  Reluctant.mb  Thumb Up.mb  Wave.mb
Maya/: MELScript.txt  Maya socket client Get Info.ipynb  Maya socket client Set Info.ipynb  Sample Scene.ipynb  test_mixamo.mb
Maya/.mayaSwatches/: test_mixamo.mb.swatches
Maya/test_mixamo.fbm/: Ch46_1001_Specular.tx
SocialAffordance/: AdvancedSkeleton.mb  BuildAnimation.py  CheckModel.ipynb  CreatePic.ipynb  Data Analysis.ipynb  DataAPI.py  DataLoader.ipynb  DataMaker.ipynb  Evaluate_Transformer_VRNN.ipynb  Evaluation_Emotion_Generator.ipynb  Learn.ipynb  MCMC.ipynb  MakeLabelData.py  MakeLabelDataSingle.py  MakeUrls.ipynb  Maya Python.py  MotionGPT.py  Params.py  PureSkeleton.mb  README  SceneGenerator.py  SceneMaker.ipynb  Seq2Seq.py  SeqTransformer.py  Test AOG.ipynb  Test_Emotion.ipynb  TrainVRNN.py  Transf.ipynb  Transf_test.ipynb  Util.ipynb  VRNN.py  mcmc.py  requirements.txt
SocialAffordance/Hand_Over/Annotation_Hand_Over/: Annotation_1.txt  Annotation_2.txt  (+4 more)
SocialAffordance/Raven/: AoT.py  AoT2.py  BuildTree.py  BuildTree2.py  Params.py
SocialAffordance/matlab_viz/: viz_result.m
StudioLibrary/: achoolPicker.pkr
StudioLibrary/.studiolibrary/: database.json
data/: Adv_Ske.csv  BlendFaces.csv  emotions.csv  label.txt
data/MovieGraphs/: .gitignore  GraphClasses.py  editor.py  pyproject.toml  startup.py
materials/.studiolibrary/: database.json
(+47809 files in other folders)
