[tool.poetry]
name = "moviegraphs"
version = "0.1.0"
description = ""
authors = ["Victor Zhang <victorzhangyf@ucla.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.4"
numpy = "^1.19.0"
matplotlib = "^3.2.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pandas = "^1.0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
